--- a/Nettsiden/logIn.html
+++ b/Nettsiden/logIn.html
@@ -6,19 +6,17 @@
     <title>Login</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
-<body>
-    <nav class = "navbar"> 
-     
-            <div class = "logo"><a href = "Index.html">SpareGrisen</a></div>
-    <ul> 
-        <li><a href="about.html"> About</a> </li>
-        <li><a href="products.html"> Products</a> </li>
-        <li><a href="contact.html"> Contact</a> </li>
-        <li><a href = "logIn.html"> My Profile</a></li>
-       
-    </ul>
- 
-    </nav>
+<nav class = "navbar"> 
+    <div class = "logo"><a href = "Index.html">SpareGrisen</a></div>
+<ul> 
+<li><a href="about.html"> About</a> </li>
+<li><a href="products.html"> Products</a> </li>
+<li><a href="contact.html"> Contact</a> </li>
+<li><a href = "signUp.html"> My Profile</a></li>
+
+</ul>
+
+</nav>
 
 <!-- Login Form Section -->
 <div class="login-container">
@@ -35,6 +33,6 @@
     <p>Don't have an account? <a href="signup.html">Create a new account</a></p> <!-- Link to Sign Up Page -->
 </div>
 
-<script src="js/script.js"></script> <!-- You can add form submission logic here -->
+<script src="Js/script.js"></script> <!-- You can add form submission logic here -->
 </body>
 </html>
