--- a/Nettsiden/signUp.html
+++ b/Nettsiden/signUp.html
@@ -8,17 +8,17 @@
 </head>
 <body>
     <nav class = "navbar"> 
-
-            <div class = "logo"><a href = "Index.html">SpareGrisen</a></div>
-    <ul> 
-        <li><a href="about.html"> About</a> </li>
-        <li><a href="products.html"> Products</a> </li>
-        <li><a href="contact.html"> Contact</a> </li>
-        <li><a href = "logIn.html"> My Profile</a></li>
-       
-    </ul>
+        <div class = "logo"><a href = "Index.html">SpareGrisen</a></div>
+<ul> 
+    <li><a href="about.html"> About</a> </li>
+    <li><a href="products.html"> Products</a> </li>
+    <li><a href="contact.html"> Contact</a> </li>
+    <li><a href = "logIn.html"> My Profile</a></li>
     
-    </nav>
+   
+</ul>
+
+</nav>
 
 <!-- Sign Up Form Section -->
 <div class="signup-container">
@@ -35,6 +35,6 @@
     <p>Already have an account? <a href="login.html">Login here</a></p> <!-- Link back to Login Page -->
 </div>
 
-<script src="js/script.js"></script>
+<script src="../js/script.js"></script>
 </body>
 </html>
