fungerende valutakalkulator koblet opp til api

--- a/Nettsiden/Index.html
+++ b/Nettsiden/Index.html
@@ -22,11 +22,15 @@
 </ul>
 
 </nav>
-<main>
-    <h3> Dette er en hjemside</h3>
 
-    <h1 class = "logo">LOGO</h1>
+
+    <main class = "index-background">
+ <div class = "index-text">
+    <h3> SpareGrisen</h3>
+
+    <h1 class = "logo"></h1>
     <p> Håper dette er til hjelp. Dette skal mok funke.</p>
+    </div>
 </main>
 </body>
 </html>
