--- a/Nettsiden/about.html
+++ b/Nettsiden/about.html
@@ -23,10 +23,15 @@
 
 </nav>
 <main class = "about-section">
-    
+
     <div class = "overlay-text">
-    <h3> Dette er om siden</h3>
-    <p> Håper dette er til hjelp. Dette skal mok funke.</p>
+    <h3> start med sparing:</h3>
+    <p> Dette kan være din grunn til å starte med sparegris!
+        Alle har en grunn til å spare, og det er viktig å ha en plan for sparingen.
+        Sparegrisen er en spareapp som hjelper deg med å spare penger til det du ønsker deg.
+        Du kan spare til en ferie, en ny bil, en ny leilighet eller hva du måtte ønske deg.
+        Det er viktig å ha en plan for sparingen, og Sparegrisen hjelper deg med å nå dine sparemål.
+    </p>
     </div>
 </main>
 </body>
