--- a/Nettsiden/contact.html
+++ b/Nettsiden/contact.html
@@ -22,9 +22,11 @@
 </ul>
 
 </nav>
-<main>
+<main class = "contact-background">
+    <div class = "contact-text">
     <h3> SpareGrisen@mail.com</h3>
     <p> Håper dette er til hjelp. Dette skal mok funke.</p>
+    </div>
 </main>
 </body>
 </html>
