--- a/Nettsiden/products.html
+++ b/Nettsiden/products.html
@@ -23,8 +23,45 @@
 
 </nav>
 <main>
-    <h3> Dette er produktene</h3>
-    <p> Håper dette er til hjelp. Dette skal mok funke.</p>
+
+
+    <p> GOD TUR!</p>
+
+    <section class = "currency-converter">
+        <h2>Valuta-kalkulator</h2>
+        <div class ="converter-form">
+        <label for = "amount">Amount:</label>
+        <input type = "number" id = "amount" placeholder = "skriv inn sum">
+        
+        <label for="fromCurrency">From:</label>
+<select id="fromCurrency">
+    <option value="USD">US Dollar (USD)</option>
+    <option value="EUR">Euro (EUR)</option>
+    <option value="NOK" selected>Norwegian Krone (NOK)</option>
+    <option value="GBP">British Pound (GBP)</option>
+    <option value="JPY">Japanese Yen (JPY)</option>
+    <!-- Add more currencies as needed -->
+</select>
+
+<label for="toCurrency">To:</label>
+<select id="toCurrency">
+    <option value="USD" selected>US Dollar (USD)</option>
+    <option value="EUR">Euro (EUR)</option>
+    <option value="NOK">Norwegian Krone (NOK)</option>
+    <option value="GBP">British Pound (GBP)</option>
+    <option value="JPY">Japanese Yen (JPY)</option>
+    <!-- Add more currencies as needed -->
+</select>
+
+
+        <button id ="convertButton">Convert</button>
+        </div>
+        <div id = "result"> </div>
+    </section>
+
+    <script src="Js/script.js"></script>
+
+
 </main>
 </body>
 </html>
