fungerende fondskalulator med sliders og graf, noe trøbbel med formel, litt feilmargin...

--- a/Nettsiden/products.html
+++ b/Nettsiden/products.html
@@ -15,7 +15,8 @@
     <div class = "logo"><a href = "Index.html">SpareGrisen</a></div>
 <ul> 
 <li><a href="about.html"> About</a> </li>
-<li><a href="products.html"> Products</a> </li>
+<li><a href="products.html"> Valuta-kalkulator</a> </li>
+<li><a href ="fondsKalkulator.html">FondsKalkulator</a></li>
 <li><a href="contact.html"> Contact</a> </li>
 <li><a href = "logIn.html"> My Profile</a></li>
 
@@ -25,7 +26,7 @@
 <main>
 
 
-    <p> GOD TUR!</p>
+
 
     <section class = "currency-converter">
         <h2>Valuta-kalkulator</h2>
