--- a/Nettsiden/logIn.html
+++ b/Nettsiden/logIn.html
@@ -10,7 +10,8 @@
     <div class = "logo"><a href = "Index.html">SpareGrisen</a></div>
 <ul> 
 <li><a href="about.html"> About</a> </li>
-<li><a href="products.html"> Products</a> </li>
+<li><a href="products.html"> Valuta-kalkulator</a> </li>
+<li><a href ="fondsKalkulator.html">FondsKalkulator</a></li>
 <li><a href="contact.html"> Contact</a> </li>
 <li><a href = "signUp.html"> My Profile</a></li>
 
