Må legge til renter og inflasjon osv på fondkalk

--- a/Nettsiden/contact.html
+++ b/Nettsiden/contact.html
@@ -9,7 +9,7 @@
 
 </head>
 <body>
-<h1 ></h1>
+
 
 <nav class = "navbar"> 
     <div class = "logo"><a href = "Index.html">SpareGrisen</a></div>
@@ -25,8 +25,9 @@
 </nav>
 <main class = "contact-background">
     <div class = "contact-text">
-    <h3> SpareGrisen@mail.com</h3>
-    <p> Håper dette er til hjelp. Dette skal mok funke.</p>
+    <h3><a href = "mailto:SpareGrisen@FakeMail.com"> SpareGrisen@FakeMail.com</a></h3> </br>
+
+    
     </div>
 </main>
 </body>
