--- a/Nettsiden/logIn.html
+++ b/Nettsiden/logIn.html
@@ -11,7 +11,7 @@
 <ul> 
 <li><a href="about.html"> About</a> </li>
 <li><a href="products.html"> Valuta-kalkulator</a> </li>
-<li><a href ="fondsKalkulator.html">FondsKalkulator</a></li>
+<li><a href ="fondsKalkulator.html">Sparekalkulator</a></li>
 <li><a href="contact.html"> Contact</a> </li>
 <li><a href = "signUp.html"> My Profile</a></li>
 
