--- a/Nettsiden/products.html
+++ b/Nettsiden/products.html
@@ -15,7 +15,7 @@
 <ul> 
 <li><a href="about.html"> About</a> </li>
 <li><a href="products.html"> Valuta-kalkulator</a> </li>
-<li><a href ="fondsKalkulator.html">FondsKalkulator</a></li>
+<li><a href ="fondsKalkulator.html">Sparekalkulator</a></li>
 <li><a href="contact.html"> Contact</a> </li>
 <li><a href = "logIn.html"> My Profile</a></li>
 
