--- a/Nettsiden/fondsKalkulator.html
+++ b/Nettsiden/fondsKalkulator.html
@@ -14,10 +14,9 @@
 <nav class = "navbar"> 
         <div class = "logo"><a href = "Index.html">SpareGrisen</a></div>
 <ul> 
-    <li><a href="about.html"> About</a> </li>
     <li><a href="products.html"> Valuta-kalkulator</a> </li>
     <li><a href ="fondsKalkulator.html">Sparekalkulator</a></li>
-    <li><a href="contact.html"> Contact</a> </li>
+    <li><a href="about.html"> Om oss</a> </li>
     <li><a href = "logIn.html"> My Profile</a></li>
    
 </ul>
