Fikse veiene "path" til og fra index og til de andre klassene, f.eks de i header..

--- a/Nettsiden/about.html
+++ b/Nettsiden/about.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Om oss</title>
     <link rel="stylesheet" href="css/style.css">
 
 </head>
@@ -15,10 +15,10 @@
         <div class = "logo"><a href = "Index.html">SpareGrisen</a></div>
 <ul> 
     
-    <li><a href="products.html"> Valuta-kalkulator</a> </li>
-    <li><a href ="fondsKalkulator.html">Sparekalkulator</a></li>
+    <li><a href="../economy/products.html"> Valuta-kalkulator</a> </li>
+    <li><a href ="../economy/fondsKalkulator.html">Sparekalkulator</a></li>
     <li><a href="about.html"> Om oss</a> </li>
-    <li><a href = "logIn.html"> My Profile</a></li>
+    <li><a href = "../login/logIn.html"> My Profile</a></li>
    
 </ul>
 
@@ -35,9 +35,12 @@
         Det er viktig å ha en plan for sparingen, og Sparegrisen hjelper deg med å nå dine sparemål.
     </p> </br>
     <h4> <a href = "mailto:SpareGrisen@FakeMail.com">SpareGrisen@FakeMail.com</a></h4> 
+
+
+    
     </div>
 
-    <div id="poverty-info-box" class="poverty-info-box"></div>
+    <div id="poverty-info-box" class="poverty-info-box">
         <h2 id="county-name">Norway</h2>
         <p id="poverty-info">Poverty: 10%. Norway has one of the lowest poverty rates in the world.</p>
     </div>
