--- a/Nettsiden/login/logIn.html
+++ b/Nettsiden/login/logIn.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 <nav class = "navbar"> 
     <div class = "logo"><a href = "Index.html">SpareGrisen</a></div>
 <ul> 
-    <li><a href="products.html"> Valuta-kalkulator</a> </li>
-    <li><a href ="fondsKalkulator.html">Sparekalkulator</a></li>
-    <li><a href="about.html"> Om oss</a> </li>
+    <li><a href="../economy/products.html"> Valuta-kalkulator</a> </li>
+    <li><a href ="../economy/fondsKalkulator.html">Sparekalkulator</a></li>
+    <li><a href="../about.html"> Om oss</a> </li>
     <li><a href = "logIn.html"> My Profile</a></li>
 
 </ul>
@@ -33,6 +33,6 @@
     <p>Don't have an account? <a href="signup.html">Create a new account</a></p> <!-- Link to Sign Up Page -->
 </div>
 
-<script src="Js/script.js"></script> <!-- You can add form submission logic here -->
+<script src="../Js/script.js"></script> <!-- You can add form submission logic here -->
 </body>
 </html>
