--- a/Nettsiden/login/signUp.html
+++ b/Nettsiden/login/signUp.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Create New Account</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
     <nav class = "navbar"> 
         <div class = "logo"><a href = "Index.html">SpareGrisen</a></div>
 <ul> 
-    <li><a href="products.html"> Valuta-kalkulator</a> </li>
-    <li><a href ="fondsKalkulator.html">Sparekalkulator</a></li>
+    <li><a href="../economy/products.html"> Valuta-kalkulator</a> </li>
+    <li><a href ="../economy/fondsKalkulator.html">Sparekalkulator</a></li>
     <li><a href="about.html"> Om oss</a> </li>
     <li><a href = "logIn.html"> My Profile</a></li>
     
@@ -35,6 +35,6 @@
     <p>Already have an account? <a href="login.html">Login here</a></p> <!-- Link back to Login Page -->
 </div>
 
-<script src="../js/script.js"></script>
+<script src="../Js/script.js"></script>
 </body>
 </html>
