--- a/Nettsiden/economy/fondsKalkulator.html
+++ b/Nettsiden/economy/fondsKalkulator.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="../css/style.css">
 
 </head>
 <body>
@@ -16,8 +16,9 @@
 <ul> 
     <li><a href="products.html"> Valuta-kalkulator</a> </li>
     <li><a href ="fondsKalkulator.html">Sparekalkulator</a></li>
-    <li><a href="about.html"> Om oss</a> </li>
-    <li><a href = "logIn.html"> My Profile</a></li>
+    <li><a href="../about.html"> Om oss</a> </li>
+    <li><a href = "../login/logIn.html"> My Profile</a></li>
+   
    
 </ul>
 
@@ -102,7 +103,7 @@
 </div>
 
 <script src="https://cdn.jsdelivr.net/npm/chart.js@3.7.1"></script>
-<script src="Js/fondkalkulator.js"></script>
+<script src="../Js/fondkalkulator.js"></script>
 
 </main>
 </body>
