--- a/Nettsiden/economy/products.html
+++ b/Nettsiden/economy/products.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="css/style.css">
+    <title>Produkt</title>
+    <link rel="stylesheet" href="../css/style.css">
 
 </head>
 <body>
@@ -15,8 +15,9 @@
 <ul> 
     <li><a href="products.html"> Valuta-kalkulator</a> </li>
     <li><a href ="fondsKalkulator.html">Sparekalkulator</a></li>
-    <li><a href="about.html"> Om oss</a> </li>
-    <li><a href = "logIn.html"> My Profile</a></li>
+    <li><a href="../about.html"> Om oss</a> </li>
+    <li><a href = "../login/logIn.html"> My Profile</a></li>
+   
 
 </ul>
 
