oppdatert, laget slik som skissen

--- a/Nettsiden/Index.html
+++ b/Nettsiden/Index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hjem</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap">
+
 
 </head>
 <body>
@@ -14,7 +16,7 @@
 <nav class = "navbar"> 
         <div class = "logo"><a href = "Index.html">SpareGrisen</a></div>
 <ul> 
-    <li><a href="testnyhjem.html"> karttest</a> </li>
+    
     <li><a href="economy/products.html"> Valuta-kalkulator</a> </li>
     <li><a href ="economy/fondsKalkulator.html">Sparekalkulator</a></li>
     <li><a href="about.html"> Om oss</a> </li>
@@ -26,7 +28,7 @@
 
 
     <main class = "index-background">
-        <div class="button-container">
+        <div class="button-container1">
             <a href="../Nettsiden/economy/economy.html" class="rounded-button economy">Økonomi</a>
             <a href="https://www.helsenorge.no" class="rounded-button health">Helse</a>
             <div class="rounded-button lykke"><span>Lykke</span></div> <!-- Inactive diamond-shaped button -->
