--- a/Nettsiden/economy/economy.html
+++ b/Nettsiden/economy/economy.html
@@ -6,18 +6,35 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Økonomi</title>
     <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap">
+
 </head>
 <body>
     <nav class = "navbar"> 
         <div class = "logo"><a href = "../Index.html">SpareGrisen</a></div>
 <ul> 
     
-    <li><a href="products.html"> Valuta-kalkulator</a> </li>
-    <li><a href ="fondsKalkulator.html">Sparekalkulator</a></li>
+    <li><a href="kalkulatorer/products.html"> Valuta-kalkulator</a> </li>
+    <li><a href ="kalkulatorer/fondsKalkulator.html">Sparekalkulator</a></li>
     <li><a href="../about.html"> Om oss</a> </li>
     <li><a href = "../login/logIn.html"> My Profile</a></li>
    
 </ul>
+</nav>
+<main
+<div class="button-container">
+    <a href="" class="rounded-button">Økonomiskolen (animasjon)</a>
+    <a href="kalkulatorer/kalkulatorer.html" class="rounded-button">Kalkulatorer</a>
+    <a href="" class="rounded-button">Økonomisk Trygghet</a>
+    <a href="" class="rounded-button">Inntekter og kostnader (tips til å redusere kostnader)</a>
+    <a href="sparing/sparing.html" class="rounded-button">Sparing</a>
+    <a href="https://www.nordea.no/privat/vare-produkter/lan-og-kreditt/lanekalkulator.html" class="rounded-button">Lån</a>
+    <a href="" class="rounded-button">Arv</a>
+    <a href="" class="rounded-button">Hjelp til selvangivelse</a>
+    <a href="skjema/skjemaer.html" class="rounded-button">Skjema</a>
+</div>
+</main>
+
 
 
 </body>
