--- a/Nettsiden/about.html
+++ b/Nettsiden/about.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Om oss</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap">
+
 
 </head>
 <body>
@@ -15,10 +17,10 @@
         <div class = "logo"><a href = "Index.html">SpareGrisen</a></div>
 <ul> 
     
-    <li><a href="../economy/products.html"> Valuta-kalkulator</a> </li>
-    <li><a href ="../economy/fondsKalkulator.html">Sparekalkulator</a></li>
+    <li><a href="economy/products.html"> Valuta-kalkulator</a> </li>
+    <li><a href ="economy/fondsKalkulator.html">Sparekalkulator</a></li>
     <li><a href="about.html"> Om oss</a> </li>
-    <li><a href = "../login/logIn.html"> My Profile</a></li>
+    <li><a href = "login/logIn.html"> My Profile</a></li>
    
 </ul>
 
