--- a/Nettsiden/economy/kalkulatorer/fondsKalkulator.html
+++ b/Nettsiden/economy/kalkulatorer/fondsKalkulator.html
@@ -5,19 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../../css/style.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap">
+
 
 </head>
 <body>
 
 
 <nav class = "navbar"> 
-        <div class = "logo"><a href = "Index.html">SpareGrisen</a></div>
+        <div class = "logo"><a href = "../../Index.html">SpareGrisen</a></div>
 <ul> 
     <li><a href="products.html"> Valuta-kalkulator</a> </li>
     <li><a href ="fondsKalkulator.html">Sparekalkulator</a></li>
-    <li><a href="../about.html"> Om oss</a> </li>
-    <li><a href = "../login/logIn.html"> My Profile</a></li>
+    <li><a href="../../about.html"> Om oss</a> </li>
+    <li><a href = "../../login/logIn.html"> My Profile</a></li>
    
    
 </ul>
@@ -103,7 +105,7 @@
 </div>
 
 <script src="https://cdn.jsdelivr.net/npm/chart.js@3.7.1"></script>
-<script src="../Js/fondkalkulator.js"></script>
+<script src="../../Js/fondkalkulator.js"></script>
 
 </main>
 </body>
