--- a/Nettsiden/economy/kalkulatorer/products.html
+++ b/Nettsiden/economy/kalkulatorer/products.html
@@ -5,13 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Produkt</title>
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../../css/style.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap">
+
 
 </head>
 <body>
 
 <nav class = "navbar"> 
-    <div class = "logo"><a href = "Index.html">SpareGrisen</a></div>
+    <div class = "logo"><a href = "../Index.html">SpareGrisen</a></div>
 <ul> 
     <li><a href="products.html"> Valuta-kalkulator</a> </li>
     <li><a href ="fondsKalkulator.html">Sparekalkulator</a></li>
