--- a/Nettsiden/login/logIn.html
+++ b/Nettsiden/login/logIn.html
@@ -5,9 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
     <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap">
+
 </head>
 <nav class = "navbar"> 
-    <div class = "logo"><a href = "Index.html">SpareGrisen</a></div>
+    <div class = "logo"><a href = "../Index.html">SpareGrisen</a></div>
 <ul> 
     <li><a href="../economy/products.html"> Valuta-kalkulator</a> </li>
     <li><a href ="../economy/fondsKalkulator.html">Sparekalkulator</a></li>
