--- a/Nettsiden/economy/kalkulatorer/kalkulatorer.html
+++ b/Nettsiden/economy/kalkulatorer/kalkulatorer.html
@@ -23,8 +23,8 @@
 </nav>
 <main
 <div class="button-container">
-    <a href="fondskalkulator.html" class="rounded-button">Økonomiskolen (animasjon)</a>
-    <a href="products.html" class="rounded-button">Kalkulatorer</a>
+    <a href="fondskalkulator.html" class="rounded-button">Sparekalkulator</a>
+    <a href="products.html" class="rounded-button">Valuta-kalkulator</a>
 </div>
 </main>
 
