--- a/Index.html
+++ b/Index.html
@@ -29,7 +29,7 @@
 
     <main class = "index-background">
         <div class="button-container1">
-            <a href="../Nettsiden/economy/economy.html" class="rounded-button economy">Økonomi</a>
+            <a href="economy/economy.html" class="rounded-button economy">Økonomi</a>
             <a href="https://www.helsenorge.no" class="rounded-button health">Helse</a>
             <div class="rounded-button lykke"><span>Lykke</span></div> <!-- Inactive diamond-shaped button -->
             <a href="preserve-memories.html" class="rounded-button memories">Bevare minner</a>
