fjernet unødvendig mappe
(NETTSIDEN)

--- a/about.html
+++ b/about.html
@@ -17,8 +17,8 @@
         <div class = "logo"><a href = "Index.html">SpareGrisen</a></div>
 <ul> 
     
-    <li><a href="economy/products.html"> Valuta-kalkulator</a> </li>
-    <li><a href ="economy/fondsKalkulator.html">Sparekalkulator</a></li>
+    <li><a href="economy/kalkulatorer/products.html"> Valuta-kalkulator</a> </li>
+    <li><a href ="economy/kalkulatorer/fondsKalkulator.html">Sparekalkulator</a></li>
     <li><a href="about.html"> Om oss</a> </li>
     <li><a href = "login/logIn.html"> My Profile</a></li>
    
