--- a/economy/kalkulatorer/products.html
+++ b/economy/kalkulatorer/products.html
@@ -17,8 +17,8 @@
 <ul> 
     <li><a href="products.html"> Valuta-kalkulator</a> </li>
     <li><a href ="fondsKalkulator.html">Sparekalkulator</a></li>
-    <li><a href="../about.html"> Om oss</a> </li>
-    <li><a href = "../login/logIn.html"> My Profile</a></li>
+    <li><a href="../../about.html"> Om oss</a> </li>
+    <li><a href = "../../login/logIn.html"> My Profile</a></li>
    
 
 </ul>
