--- a/login/logIn.html
+++ b/login/logIn.html
@@ -11,8 +11,8 @@
 <nav class = "navbar"> 
     <div class = "logo"><a href = "../Index.html">SpareGrisen</a></div>
 <ul> 
-    <li><a href="../economy/products.html"> Valuta-kalkulator</a> </li>
-    <li><a href ="../economy/fondsKalkulator.html">Sparekalkulator</a></li>
+    <li><a href="../economy/kalkulatorer/products.html"> Valuta-kalkulator</a> </li>
+    <li><a href ="../economy/kalkulatorer/fondsKalkulator.html">Sparekalkulator</a></li>
     <li><a href="../about.html"> Om oss</a> </li>
     <li><a href = "logIn.html"> My Profile</a></li>
 
