--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@
    
 
     <nav class = "navbar"> 
-        <div class = "logo"><a href = "Index.html">SpareGrisen</a></div>
+        <div class = "logo"><a href = "index.html">SpareGrisen</a></div>
 <ul> 
     
     <li><a href="economy/kalkulatorer/products.html"> Valuta-kalkulator</a> </li>
