--- a/economy/kalkulatorer/products.html
+++ b/economy/kalkulatorer/products.html
@@ -13,7 +13,7 @@
 <body>
 
 <nav class = "navbar"> 
-    <div class = "logo"><a href = "../Index.html">SpareGrisen</a></div>
+    <div class = "logo"><a href = "../index.html">SpareGrisen</a></div>
 <ul> 
     <li><a href="products.html"> Valuta-kalkulator</a> </li>
     <li><a href ="fondsKalkulator.html">Sparekalkulator</a></li>
