--- a/economy/sparing/alder/barn.html
+++ b/economy/sparing/alder/barn.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <nav class = "navbar"> 
-        <div class = "logo"><a href = "../../../Index.html">SpareGrisen</a></div>
+        <div class = "logo"><a href = "../../../index.html">SpareGrisen</a></div>
 <ul> 
     
     <li><a href="../../kalkulatorer/products.html"> Valuta-kalkulator</a> </li>
