--- a/login/logIn.html
+++ b/login/logIn.html
@@ -9,7 +9,7 @@
 
 </head>
 <nav class = "navbar"> 
-    <div class = "logo"><a href = "../Index.html">SpareGrisen</a></div>
+    <div class = "logo"><a href = "../index.html">SpareGrisen</a></div>
 <ul> 
     <li><a href="../economy/kalkulatorer/products.html"> Valuta-kalkulator</a> </li>
     <li><a href ="../economy/kalkulatorer/fondsKalkulator.html">Sparekalkulator</a></li>
