--- a/economy/kalkulatorer/kalkulatorer.html
+++ b/economy/kalkulatorer/kalkulatorer.html
@@ -23,7 +23,7 @@
 </nav>
 <main
 <div class="button-container">
-    <a href="fondskalkulator.html" class="rounded-button">Sparekalkulator</a>
+    <a href="fondsKalkulator.html" class="rounded-button">Sparekalkulator</a>
     <a href="products.html" class="rounded-button">Valuta-kalkulator</a>
 </div>
 </main>
