--- a/economy/sparing/alder/barn.html
+++ b/economy/sparing/alder/barn.html
@@ -7,7 +7,7 @@
     <title>Økonomi</title>
     <link rel="stylesheet" href="../../../css/style.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap">
-
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=account_circle" />
 </head>
 <body>
     <nav class = "navbar"> 
@@ -16,7 +16,9 @@
     
     
     <li><a href="../../../about.html"> Om oss</a> </li>
-    <li><a href = "../../../login/logIn.html"> My Profile</a></li>
+    <li><a href = "../../../login/logIn.html"> 
+        <span class="material-symbols-outlined">account_circle</span></a>
+    </li>
    
 </ul>
 </nav>
