--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Hjem</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap">
-
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=account_circle" />
 
 </head>
 <body>
@@ -19,7 +19,10 @@
     
   
     <li><a href="about.html"> Om oss</a> </li>
-    <li><a href = "login/logIn.html"> My Profile</a></li>
+    <li><a href = "login/logIn.html"> 
+        <span class="material-symbols-outlined">account_circle</span></a>
+    </li>
+    
    
 </ul>
 
@@ -29,10 +32,10 @@
     <main class = "index-background">
         <div class="button-container1">
             <a href="economy/economy.html" class="rounded-button economy">Økonomi</a>
-            <a href="https://www.helsenorge.no" class="rounded-button health">Helse</a>
+            <a href="Helse/helse.html" class="rounded-button health">Helse</a>
             <div class="rounded-button lykke"><span>Lykke</span></div> <!-- Inactive diamond-shaped button -->
-            <a href="preserve-memories.html" class="rounded-button memories">Bevare minner</a>
-            <a href="blog.html" class="rounded-button blog">Blogg</a>
+            <a href="minner/preserve-memories.html" class="rounded-button memories">Bevare minner</a>
+            <a href="Blogg/blog.html" class="rounded-button blog">Blogg</a>
         </div>
 
 
