--- a/login/logIn.html
+++ b/login/logIn.html
@@ -6,14 +6,18 @@
     <title>Login</title>
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap">
-
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=account_circle" />
 </head>
 <nav class = "navbar"> 
     <div class = "logo"><a href = "../index.html">SpareGrisen</a></div>
 <ul> 
     
     <li><a href="../about.html"> Om oss</a> </li>
-    <li><a href = "logIn.html"> My Profile</a></li>
+    <li><a href = "logIn.html"> 
+        <span class="material-symbols-outlined">
+        account_circle
+        </span></a>
+    </li>
 
 </ul>
 
