--- a/login/signUp.html
+++ b/login/signUp.html
@@ -6,7 +6,7 @@
     <title>Create New Account</title>
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap">
-
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=account_circle" />
 </head>
 <body>
     <nav class = "navbar"> 
@@ -14,7 +14,11 @@
 <ul> 
  
     <li><a href="about.html"> Om oss</a> </li>
-    <li><a href = "logIn.html"> My Profile</a></li>
+    <li><a href = "logIn.html"> 
+        <span class="material-symbols-outlined">
+        account_circle
+        </span></a>
+    </li>
     
    
 </ul>
