--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
   
     <li><a href="about.html"> Om oss</a> </li>
     <li><a href = "login/logIn.html"> 
-        <span class="material-symbols-outlined">account_circle</span></a>
+        <span class="material-symbols-outlined">
+        account_circle
+        </span></a>
     </li>
     
    
