prøver å fikse mobil setup

--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
 
     <main class = "index-background">
         <div class="button-container1">
-            <a href="economy/economy.html" class="rounded-button economy">Økonomi</a>
-            <a href="Helse/helse.html" class="rounded-button health">Helse</a>
-            <div class="rounded-button lykke"><span>Lykke</span></div> <!-- Inactive diamond-shaped button -->
-            <a href="minner/preserve-memories.html" class="rounded-button memories">Bevare minner</a>
-            <a href="Blogg/blog.html" class="rounded-button blog">Blogg</a>
+            <a href="economy/economy.html" class="rounded-button1 economy">Økonomi</a>
+            <a href="Helse/helse.html" class="rounded-button1 health">Helse</a>
+            <div class="rounded-button1 lykke"><span>Lykke</span></div> <!-- Inactive diamond-shaped button -->
+            <a href="minner/preserve-memories.html" class="rounded-button1 memories">Bevare minner</a>
+            <a href="Blogg/blog.html" class="rounded-button1 blog">Blogg</a>
         </div>
 
 
