--- a/economy/kalkulatorer/products.html
+++ b/economy/kalkulatorer/products.html
@@ -62,7 +62,7 @@
         <div id = "result"> </div>
     </section>
 
-    <script src="Js/script.js"></script>
+    <script src="../../Js/script.js"></script>
 
 
 </main>
