--- a/login/logIn.html
+++ b/login/logIn.html
@@ -35,7 +35,7 @@
         <br><br>
         <button type="submit">Login</button>
     </form>
-    <p>Don't have an account? <a href="signup.html">Create a new account</a></p> <!-- Link to Sign Up Page -->
+    <p>Don't have an account? <a href="signUp.html">Create a new account</a></p> <!-- Link to Sign Up Page -->
 </div>
 
 <script src="../Js/script.js"></script> <!-- You can add form submission logic here -->
